# uEdition

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codestyle.yml  coverage.yml  release.yml  tests.yml
docs/: .gitignore  .readthedocs.yml  .uEdition.answers  _config.yml  _toc.yml  docs-server.py  index.md  pyproject.toml  toc.yml  uEdition.yml
docs/de/: .uEdition.answers  changelog.md  index.md
docs/de/getting-started/: configuration.md  content.md  create.md  index.md  installation.md  language-add.md  publish.md  update.md
docs/de/recipes/: index.md  mixed-content-xml.md  tei-block-content-wrap.md
docs/de/tutorial/: annotation.md  configuration.md  edit-page.md  index.md  installation.md  new-page.md  new-uedition.md  next-page.md  publishing.md  ueditor.md
docs/de/tutorial/using-git/: index.md  initialise.md  publishing.md  remote.md  using.md
docs/de/tutorial/using-tei/: configuration.md  create.md  index.md  main-text.md  metadata.md
docs/de/user/: configuration.md  content.md  create.md  index.md  installation.md  language-add.md  language-update.md  publish.md  update.md
docs/en/: .uEdition.answers  changelog.md  index.md
docs/en/getting-started/: configuration.md  content.md  create.md  index.md  installation.md  language-add.md  publish.md  update.md  working-with-tei.tei
docs/en/recipes/: index.md  mixed-content-xml.md  tei-block-content-wrap.md
docs/en/tei/: blocks.md  index.md  marks.md  sections.md
docs/en/tutorial/: annotation.md  configuration.md  edit-page.md  index.md  installation.md  new-page.md  new-uedition.md  publishing.md  ueditor.md
docs/en/tutorial/using-git/: publishing.md  remote.md
docs/en/tutorial/using-tei/: configuration.md  create.md  main-text.md
docs/en/user/: content.md  create.md  installation.md  language-add.md  language-update.md  publish.md  working-with-tei.tei
docs/static/: mixed-content-convert.py  overrides.css  pyproject.toml  tei-block-content-wrap.py
docs/user/: content.md  index.md  installation.md  publish.md  update.md
docs_old/: _config.yml
docs_old/user/: language-add.md  language-update.md
tests/: __init__.py  conftest.py  test_about.py  test_build.py  test_check.py  test_language.py  test_serve.py  test_settings.py  test_update.py
tests/fixtures/basic/: uEdition.yml
tests/fixtures/invalid_core_files/: uEdition.yaml
tests/fixtures/invalid_core_files/en/: _toc.yml
tests/fixtures/missing_files/: uEdition.yaml
tests/fixtures/missing_files/en/: _toc.yml  intro.md
tests/fixtures/missing_toc_root/en/: _toc.yml
tests/fixtures/missing_toc_root_file/en/: _toc.yml
tests/fixtures/multilang/: .gitignore  toc.yml  uEdition.yaml
tests/fixtures/multilang/de/: _config.yml  _toc.yml  a-1-page.md  a-2-page.md  a-page.md  b-page.md  intro.md
tests/fixtures/multilang/en/: _config.yml  _toc.yml  a-1-page.md  a-2-page.md  a-page.md  b-page.md  missing-page.md
tests/fixtures/yaml/: uEdition.yaml
tests/test_ext/: test_config.py
tests/test_ext/test_tei/: __init__.py  test_parser.py
uedition/: CHANGELOG.md  __about__.py  __init__.py  __main__.py  settings.py
uedition/cli/: __init__.py  base.py  build.py  check.py  create.py  init.py  language.py  migrate.py  serve.py  update.py
uedition/ext/: __init__.py  config.py  language_switcher.css  language_switcher.js  language_switcher.py  settings.py  tei.py  video.py
uedition/ext/tei/: __init__.py  base.py  builder.py  parser.py  tei2doc.py  tei_download.js
