[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uEdition"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Mark Hall", email = "mark.hall@work.room3b.eu" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "copier>=9.0.0,<10.0.0",
  "jupyter-book>=1.0.0,<2.0.0",
  "lxml>=4.9.2,<6.0.0",
  "livereload",
  "pydantic>=2.0.0,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "typer[all]<1.0.0",
]
dynamic = ["version"]

[project.scripts]
uEdition = "uedition.cli:app"

[project.urls]
Documentation = "https://github.com/uEdition/uEdition#readme"
Issues = "https://github.com/uEdition/uEdition/issues"
Source = "https://github.com/uEdition/uEdition"

[project.entry-points."sphinx.builders"]
tei = "uedition.ext.tei.builder"

[tool.hatch.version]
path = "uedition/__about__.py"

[tool.hatch.envs.default]
extra-dependencies = ["coverage[toml]>=6.5", "pytest"]

[tool.hatch.envs.default.scripts]
docs-server = "cd docs && uEdition serve"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]

dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
detached = true
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:uedition tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "ANN",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Ignore self annotations
  "ANN101",
  # Ignore conflicting documentation options
  "D203",
  "D213",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["uedition"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["uedition", "tests"]
branch = true
parallel = true
omit = ["uedition/__about__.py"]

[tool.coverage.paths]
uedition = ["uedition", "*/uedition/uedition"]
tests = ["tests", "*/uedition/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
skip_covered = true
show_missing = true
