[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uedition_docs"
description = 'The μEdition Documentation'
requires-python = ">=3.10"
keywords = []
authors = [{ name = "Mark Hall", email = "mark.hall@work.room3b.eu" }]
classifiers = []
dependencies = []
version = "1.0.0"

[project.urls]
Documentation = "https://github.com/uEdition/uEdition/-#readme"
Issues = "https://github.com/uEdition/uEdition/-/issues"
Source = "https://github.com/uEdition/uEdition/-"

[tool.hatch.envs.default]
dependencies = ["sphinx_design", "uedition<3,>=2.0.0", "uedition_editor>=2.0.1,<2.1"]
skip-install = true

[tool.hatch.envs.default.scripts]
build = "uEdition build {args}"
init = "uEdition init {args}"
serve = "uEdition serve {args}"
update = "uEdition update {args}"
migrate = "uEdition migrate {args}"
language = "uEdition language {args}"
edit = "uvicorn --port 8080 uedition_editor:app {args} {args}"
